--- a/src/styles/SliderSection.module.scss
+++ b/src/styles/SliderSection.module.scss
@@ -7,6 +7,9 @@
   // box model
   padding: 9rem 0;
 
+  // visual
+  overflow-x: clip;
+
   @include atTablet {
     // box model
     background-image: none;
